快完成Java List的部分了，提交较多，主动重构引起的